# BI-OSY

./: README.md
first_task/: CMakeLists.txt  Makefile  common.h  first_task.cpp  progtest_solver.h  sample_tester.cpp  sample_tester.h  solution.cpp  test
